# RedBuri

ros2_ws/src/base_control/config/: base_cmd_to_motor.yaml
ros2_ws/src/base_control/src/: base_cmd_to_motor.cpp
ros2_ws/src/redburi_description/: CMakeLists.txt
ros2_ws/src/redburi_description/urdf/: arm.urdf.xacro
ros2_ws/src/redburi_launch/: package.xml  setup.cfg  setup.py
ros2_ws/src/redburi_launch/launch/: moveit_only.launch.py  redburi_all.launch.py  redburi_sim.launch.py  remote_all.launch.py  servo_only.launch.py  servo_teleop.launch.py  servo_teleop_real.launch.py  teleop_only.launch.py  teleop_sim.launch.py
ros2_ws/src/redburi_moveit/: .setup_assistant  package.xml
ros2_ws/src/redburi_moveit/config/: initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  redburi_arm.ros2_control.xacro  redburi_arm.srdf  redburi_arm.urdf.xacro  ros2_controllers.yaml  servo.yaml
ros2_ws/src/redburi_moveit/launch/: demo.launch.py
ros2_ws/src/redburi_msgs/: CMakeLists.txt
ros2_ws/src/serial_bridge/: CMakeLists.txt
ros2_ws/src/serial_bridge/src/: serial_bridge_node.cpp
ros2_ws/src/teleop/: CMakeLists.txt
ros2_ws/src/teleop/config/: arm_joint_state_estimator_node.yaml  joy_arm_cartesian_node.yaml  joy_arm_joint_node.yaml  servo.yaml  servo_arm_motor_node.yaml
ros2_ws/src/teleop/src/: arm_joint_state_estimator_node.cpp  joy_arm_cartesian_node.cpp  joy_arm_joint_node.cpp  joy_base_node.cpp  joy_mode_node.cpp  servo_arm_motor_node.cpp
stm32/nucleo_f446re/Src/: can.c  tim.c  usart.c  user_tim_callback.cpp  user_uart_callback.cpp
(+13 files in other folders)
